force-app/main/default/objects/DHS_Lead__c/DHS_Lead__c.object-meta.xml
<CustomObject>
    <label>Lead</label>
    <nameField>
        <displayFormat>Lead-{000000}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>