force-app/main/default/objects/DHS_Lead__c/fields/Acad_Disc_Verif_Notes__c.field-meta.xml
<CustomField>
    <fullName>Acad_Disc_Verif_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Academic Discipline Verification Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>