force-app/main/default/objects/DHS_Lead__c/fields/Academic_Discipline_Verified__c.field-meta.xml
<CustomField>
    <fullName>Academic_Discipline_Verified__c</fullName>
    <label>Academic Discipline Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>