force-app/main/default/objects/DHS_Lead__c/fields/Additional_Lead_details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Lead_details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Lead details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>