force-app/main/default/objects/DHS_Lead__c/fields/Additional_Leads__c.field-meta.xml
<CustomField>
    <fullName>Additional_Leads__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Leads</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>