force-app/main/default/objects/DHS_Lead__c/fields/Address_line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_line_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address (line 2):</label>
    <length>255</length>
    <type>Text</type>
</CustomField>