force-app/main/default/objects/DHS_Lead__c/fields/Address_on_Identification2__c.field-meta.xml
<CustomField>
    <fullName>Address_on_Identification2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address as listed on identification2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>