force-app/main/default/objects/DHS_Lead__c/fields/Address_on_Identification4__c.field-meta.xml
<CustomField>
    <fullName>Address_on_Identification4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address as listed on identification4</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>