force-app/main/default/objects/DHS_Lead__c/fields/Agency_of_Issuance_Notes3__c.field-meta.xml
<CustomField>
    <fullName>Agency_of_Issuance_Notes3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency of Issuance Notes3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>