force-app/main/default/objects/DHS_Lead__c/fields/Agency_of_Issuance_Notes4__c.field-meta.xml
<CustomField>
    <fullName>Agency_of_Issuance_Notes4__c</fullName>
    <label>Agency of Issuance Notes4</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>