force-app/main/default/objects/DHS_Lead__c/fields/Any_Aliases__c.field-meta.xml
<CustomField>
    <fullName>Any_Aliases__c</fullName>
    <label>Any Aliases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>