force-app/main/default/objects/DHS_Lead__c/fields/Assigned_To_Investigator_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Investigator_Email__c</fullName>
    <formula>DHS_Assigned_To__r.Email</formula>
    <label>Assigned To Investigator Email</label>
    <type>Text</type>
</CustomField>