force-app/main/default/objects/DHS_Lead__c/fields/Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Name__c</fullName>
    <formula>DHS_Assigned_To__r.FirstName + &apos; &apos; + DHS_Assigned_To__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Name</label>
    <type>Text</type>
</CustomField>