force-app/main/default/objects/DHS_Lead__c/fields/ASSOC_REC_ORG_MEMBERS__c.field-meta.xml
<CustomField>
    <fullName>ASSOC_REC_ORG_MEMBERS__c</fullName>
    <label>ASSOCIATION RECORD/ORGANIZATION MEMBERS</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>