force-app/main/default/objects/DHS_Lead__c/fields/Attachment_Description__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Description__c</fullName>
    <label>Attachment Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>