force-app/main/default/objects/DHS_Lead__c/fields/Attachment_Provided_Description__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Provided_Description__c</fullName>
    <label>Attachment Provided Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>