force-app/main/default/objects/DHS_Lead__c/fields/Birth_Certificate_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Birth_Certificate_Document_Number__c</fullName>
    <label>Birth Certificate Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>