force-app/main/default/objects/DHS_Lead__c/fields/Birth_Certificate_verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Certificate_verified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Birth Certificate verified Date</label>
    <type>Date</type>
</CustomField>