force-app/main/default/objects/DHS_Lead__c/fields/Blackmail_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Blackmail_Pressure__c</fullName>
    <label>Susceptibility to blackmail, pressure or</label>
    <length>255</length>
    <type>Text</type>
</CustomField>