force-app/main/default/objects/DHS_Lead__c/fields/Bursar_Office_Verif_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bursar_Office_Verif_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bursar&apos;s Office Verification Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>