force-app/main/default/objects/DHS_Lead__c/fields/Bursar_s_Office_Verified__c.field-meta.xml
<CustomField>
    <fullName>Bursar_s_Office_Verified__c</fullName>
    <label>Bursar&apos;s Office Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>