force-app/main/default/objects/DHS_Lead__c/fields/Campus_SecPolice_Verif_Notes__c.field-meta.xml
<CustomField>
    <fullName>Campus_SecPolice_Verif_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campus SecurityPolice Verification Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>