force-app/main/default/objects/DHS_Lead__c/fields/CIVIL_LITIGATION_Notes__c.field-meta.xml
<CustomField>
    <fullName>CIVIL_LITIGATION_Notes__c</fullName>
    <label>CIVIL LITIGATION Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>