force-app/main/default/objects/DHS_Lead__c/fields/COHABITANT_AND_OR_ROOMMATE_S__c.field-meta.xml
<CustomField>
    <fullName>COHABITANT_AND_OR_ROOMMATE_S__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COHABITANT AND/OR ROOMMATE(S)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>