force-app/main/default/objects/DHS_Lead__c/fields/Conducted_via_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Conducted_via_Telephone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conducted via Telephone</label>
    <type>Checkbox</type>
</CustomField>