force-app/main/default/objects/DHS_Lead__c/fields/Contact_Info_Verif_EQUIP3__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_Verif_EQUIP3__c</fullName>
    <label>Contact Info verified as listed inEQUIP3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>