force-app/main/default/objects/DHS_Lead__c/fields/Contact_Info_Verif_EQUIP_Nts2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_Verif_EQUIP_Nts2__c</fullName>
    <label>Contact Info verified in EQUIP Notes2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>