force-app/main/default/objects/DHS_Lead__c/fields/Contact_Info_Verif_EQUIP_Nts3__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_Verif_EQUIP_Nts3__c</fullName>
    <label>Contact Info verified in EQUIP Notes3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>