force-app/main/default/objects/DHS_Lead__c/fields/Contact_Method_Inv_Note__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Inv_Note__c</fullName>
    <label>Contact method Investigator&apos;s Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>