force-app/main/default/objects/DHS_Lead__c/fields/Contact_Primary_Association_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Primary_Association_Notes__c</fullName>
    <label>Contact Primary Association Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>