force-app/main/default/objects/DHS_Lead__c/fields/counter_intel_counter_terror__c.field-meta.xml
<CustomField>
    <fullName>counter_intel_counter_terror__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>counter intelligence counter terrorism</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>