force-app/main/default/objects/DHS_Lead__c/fields/Country_of_Issuance3__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Issuance3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country of Issuance3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>