force-app/main/default/objects/DHS_Lead__c/fields/Country_of_Issuance4__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Issuance4__c</fullName>
    <label>Country of Issuance4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>