force-app/main/default/objects/DHS_Lead__c/fields/Current_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Current_Treatment__c</fullName>
    <label>Current Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>