force-app/main/default/objects/DHS_Lead__c/fields/Date_Checked__c.field-meta.xml
<CustomField>
    <fullName>Date_Checked__c</fullName>
    <label>Date Checked</label>
    <type>Date</type>
</CustomField>