force-app/main/default/objects/DHS_Lead__c/fields/Date_Record_Provided__c.field-meta.xml
<CustomField>
    <fullName>Date_Record_Provided__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Record Provided</label>
    <type>Date</type>
</CustomField>