force-app/main/default/objects/DHS_Lead__c/fields/Date_Search_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Date_Search_Conducted__c</fullName>
    <label>Date Search Conducted</label>
    <type>Date</type>
</CustomField>