force-app/main/default/objects/DHS_Lead__c/fields/Date_Viewed_and_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Viewed_and_Verified__c</fullName>
    <label>Date Viewed and Verified</label>
    <type>Date</type>
</CustomField>