force-app/main/default/objects/DHS_Lead__c/fields/Days_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Days_Assigned__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>