force-app/main/default/objects/DHS_Lead__c/fields/DHS_Case__c.field-meta.xml
<CustomField>
    <fullName>DHS_Case__c</fullName>
    <label>Case</label>
    <referenceTo>DHS_Case__c</referenceTo>
    <relationshipName>DHS_Case_Leads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>