force-app/main/default/objects/DHS_Lead__c/fields/DHS_Contact__c.field-meta.xml
<CustomField>
    <fullName>DHS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>DHS_Contact__c</referenceTo>
    <relationshipName>DHS_Contact_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>