force-app/main/default/objects/DHS_Lead__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>