force-app/main/default/objects/DHS_Lead__c/fields/EDUC_End_Date_of_Attendance__c.field-meta.xml
<CustomField>
    <fullName>EDUC_End_Date_of_Attendance__c</fullName>
    <label>EDUC End Date of Attendance</label>
    <type>Date</type>
</CustomField>