force-app/main/default/objects/DHS_Lead__c/fields/EDUC_Start_Date_of_Attendance__c.field-meta.xml
<CustomField>
    <fullName>EDUC_Start_Date_of_Attendance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EDUC Start Date of Attendance</label>
    <type>Date</type>
</CustomField>