force-app/main/default/objects/DHS_Lead__c/fields/Education_Association__c.field-meta.xml
<CustomField>
    <fullName>Education_Association__c</fullName>
    <label>Education Association</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education Record</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>