force-app/main/default/objects/DHS_Lead__c/fields/Education_Association_Notes__c.field-meta.xml
<CustomField>
    <fullName>Education_Association_Notes__c</fullName>
    <label>Education Association Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>