force-app/main/default/objects/DHS_Lead__c/fields/EMPLOYMENT__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYMENT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMPLOYMENT</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>