force-app/main/default/objects/DHS_Lead__c/fields/Employment_Association_Notes__c.field-meta.xml
<CustomField>
    <fullName>Employment_Association_Notes__c</fullName>
    <label>Employment Association Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>