force-app/main/default/objects/DHS_Lead__c/fields/Employment_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Employment_Contact_Method__c</fullName>
    <label>Employment Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person (directly by investigator)</fullName>
            </value>
            <value>
                <fullName>Approved Internet Site</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Telephone/Fax</fullName>
                <isActive>false</isActive>
                <label>Telephone/Fax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>