force-app/main/default/objects/DHS_Lead__c/fields/Employment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Employment_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employment End Date</label>
    <type>Date</type>
</CustomField>