force-app/main/default/objects/DHS_Lead__c/fields/Expl_Leads_Not_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Expl_Leads_Not_Obtained__c</fullName>
    <label>Explanation of why leads not obtained</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>