force-app/main/default/objects/DHS_Lead__c/fields/Explanation_of_No_Record__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_No_Record__c</fullName>
    <label>Explanation of No Record</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>